add getmapping for string, printing given string

--- a/week-07/day-4/src/main/resources/templates/string.html
+++ b/week-07/day-4/src/main/resources/templates/string.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>string</title>
 </head>
 <body>
+
+<h1 th:text="'&quotThis is an <em>HTML</em> text. <b>Enjoy yourself!</b>&quot'"></h1>
 
 </body>
 </html>
