--- a/week-07/day-4/src/main/resources/templates/index.html
+++ b/week-07/day-4/src/main/resources/templates/index.html
@@ -11,12 +11,14 @@
         <th>Name</th>
         <th>Balance</th>
         <th>Type</th>
+        <th>King</th>
     </tr>
     <tr th:each="account, status : ${account}">
         <td th:text="${status.index + 1}"></td>
         <td th:text="${account.getName()}"></td>
         <td th:text="${account.getTwoDecimalBalance()}"></td>
         <td th:text="${account.getAnimalType()}"></td>
+        <td th:if="${account.isKing()}"><p style="color: gold">KING</p></td>
     </tr>
 </table>
 
