add search for description

--- a/week-07/day-5/src/main/resources/templates/index.html
+++ b/week-07/day-5/src/main/resources/templates/index.html
@@ -21,6 +21,19 @@
     </ul>
 </div>
 
+<div class="search">
+    <form action="" th:action="@{'/search'}" method="post">
+        <table>
+            <tr>
+                <th>Search for:</th>
+            </tr>
+            <tr>
+                <td><input type="text" placeholder="Something like Nike..." name="searchString"><input type="submit" value="Search"></td>
+            </tr>
+        </table>
+    </form>
+</div>
+
 <div class="table">
     <table>
         <tr>
