add caesar exercise in utility

--- a/week-08/day-2/src/main/resources/templates/utility.html
+++ b/week-08/day-2/src/main/resources/templates/utility.html
@@ -8,6 +8,8 @@
 
 <a th:href="'/useful/colored'"><h1>GET RANDOM COLOR</h1></a>
 <a th:href="'/useful/email?email=is@this.valid'"><h1>VALIDATE EMAIL</h1></a>
+<a th:href="'useful/encoder?text=aaaaabbbbbccccc&number=2'"><h1>ENCODER</h1></a>
+<a th:href="'useful/encoder?text=cccccdddddeeeee&number=2'"><h1>DECODER</h1></a>
 
 </body>
 </html>
