add mappings for list, adding student, add templates

--- a/week-08/day-2/src/main/resources/templates/gfa.html
+++ b/week-08/day-2/src/main/resources/templates/gfa.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Greenfox</title>
 </head>
 <body>
-
-<table>
-    <tr>
-        <td></td>
-    </tr>
-</table>
+<a th:href="'gfa/list'"><h1>List of students</h1></a>
+<a th:href="'gfa/add'"><h1>Add new student</h1></a>
 
 </body>
 </html>
