add count and check, add service for storing names in txt file

--- a/week-08/day-2/src/main/resources/templates/gfa.html
+++ b/week-08/day-2/src/main/resources/templates/gfa.html
@@ -5,8 +5,11 @@
     <title>Greenfox</title>
 </head>
 <body>
+<header th:text="${count}">
+</header>
 <a th:href="'gfa/list'"><h1>List of students</h1></a>
 <a th:href="'gfa/add'"><h1>Add new student</h1></a>
+<a th:href="'gfa/check?name=Vladimir'"><h1>Check on student</h1></a>
 
 </body>
 </html>
