--- a/week-08/day-4/src/main/resources/templates/login.html
+++ b/week-08/day-4/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 <div>
     <p>Please provide a name, so you can associate it to your pet!</p>
     <form action="" th:name="name" th:method="post">
-        <label for="name">Name</label><input type="text" id="name">
+        <label for="name">Name</label><input type="text" id="name" th:name="name">
         <button type="submit">GO</button>
     </form>
 </div>
