--- a/week-08/day-4/src/main/resources/templates/login.html
+++ b/week-08/day-4/src/main/resources/templates/login.html
@@ -9,7 +9,8 @@
     <h1>Welcome to Programmer Fox Club!</h1>
 </div>
 <div>
-    <p>Please provide a name, so you can associate it to your pet!</p>
+    <p th:if="${name} != null" th:text="'You have provided a name that has not been used before, add it as a new one!'" style="color: red"></p>
+    <p>Please provide a name, so you can associate it to your pet</p>
     <form action="" th:name="name" th:method="post">
         <label for="name">Name</label><input type="text" id="name" th:name="name">
         <button type="submit">GO</button>
