add Todo exercise

--- a/week-08/day-4/src/main/resources/templates/index.html
+++ b/week-08/day-4/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
     <ul>
         <li><a href="#" th:href="@{/(name=${fox.getName()})}">Information</a></li>
         <li><a href="" th:href="@{/nutritionStore(name=${fox.getName()})}">Nutrition Store</a></li>
+        <li><a href="" th:href="@{/trickCenter(name=${fox.getName()})}">Trick Center</a></li>
     </ul>
 </div>
 <div>
