--- a/week-09/day-1/src/main/resources/templates/todolist.html
+++ b/week-09/day-1/src/main/resources/templates/todolist.html
@@ -16,12 +16,12 @@
         <th>DONE</th>
     </tr>
     <tr th:each="todo : ${todoList}">
-        <form th:action="@{/todo/2/delete}" th:method="delete">
+        <form action="#" th:action="@{'/todo/{id}/delete'(id=${todo.getId()})}" th:method="delete">
         <td th:text="${todo.getId()}"></td>
         <td th:text="${todo.getTitle()}"></td>
         <td th:text="${todo.isUrgent()}"></td>
         <td th:text="${todo.isDone()}"></td>
-        <td><button th:value="${todo.getId()}">delete</button></td>
+        <td><button type="submit">delete</button></td>
         </form>
     </tr>
 </table>
