--- a/week-09/day-1/src/main/resources/templates/todo/todolist.html
+++ b/week-09/day-1/src/main/resources/templates/todo/todolist.html
@@ -8,6 +8,7 @@
 <body>
 <h1>TODOS FOR TODAY:</h1>
 <a href="#" th:href="@{add}">Add new todo</a>
+<a href="#" th:href="'/assignee/'">List of assignees</a>
 <table>
     <tr>
         <th>ID</th>
