add database connections between tables, add listing todo's for specific asignee

--- a/week-09/day-1/src/main/resources/templates/assignee/assigneeList.html
+++ b/week-09/day-1/src/main/resources/templates/assignee/assigneeList.html
@@ -17,7 +17,7 @@
     </tr>
     <tr th:each="assignee : ${assigneeList}">
         <td th:text="${assignee.getId()}"></td>
-        <td th:text="${assignee.getName()}"></td>
+        <td><a href="#" th:href="@{'/assignee/{id}'(id=${assignee.getId()})}" th:text="${assignee.getName()}"></a></td>
         <td th:text="${assignee.getEmail()}"></td>
         <td>
             <form action="#" th:action="@{'/assignee/{id}/delete'(id=${assignee.getId()})}" th:method="delete">
