--- a/week-09/day-1/src/main/resources/templates/todo/edit.html
+++ b/week-09/day-1/src/main/resources/templates/todo/edit.html
@@ -7,9 +7,11 @@
 <body>
 <h1>EDIT TODO</h1>
 <form action="#" th:action="@{'/todo/{id}/edit'(id=${id})}" th:object="${todo}" th:method="post">
-    <label>Todo description</label><input type="text" th:field="*{title}">
+    <label>Todo title</label><input type="text" th:field="*{title}">
+    <label>Todo description</label><input type="text" th:field="*{description}">
     <label>Urgent</label><input type="checkbox" th:field="*{urgent}" th:checked="${urgent}">
     <label>Done</label><input type="checkbox" th:field="*{done}" th:checked="${done}">
+    <label>Due date</label><input type="date" th:field="*{dueDate}">
     <label>Add assignee</label>
     <select name="assignee" id="assignee">
         <option th:each="assignee : ${assignees}" th:value="${assignee.id}" th:text="${assignee}"></option>
