--- a/week-09/day-1/src/main/resources/templates/todo/todolist.html
+++ b/week-09/day-1/src/main/resources/templates/todo/todolist.html
@@ -7,22 +7,33 @@
 </head>
 <body>
 <h1>TODOS FOR TODAY:</h1>
+<h3>SEARCH</h3>
+<form action="#" th:action="@{/todo/search}" th:method="post">
+    <label>Search</label><input type="text" th:name="searchString">
+    <button type="submit">Search</button>
+</form>
 <a href="#" th:href="@{add}">Add new todo</a>
 <a href="#" th:href="'/assignee/'">List of assignees</a>
 <table>
     <tr>
         <th>ID</th>
         <th>ACTION</th>
+        <th>DESCRIPTION</th>
         <th>URGENT</th>
         <th>DONE</th>
         <th>ASSIGNEE</th>
+        <th>DATE OF CREATION</th>
+        <th>DUE DATE</th>
     </tr>
     <tr th:each="todo : ${todoList}">
         <td th:text="${todo.getId()}"></td>
         <td th:text="${todo.getTitle()}"></td>
+        <td th:text="${todo.getDescription()}"></td>
         <td th:text="${todo.isUrgent()}"></td>
         <td th:text="${todo.isDone()}"></td>
         <td><a href="#" th:if="${todo.getAssignee()} != null" th:text="${todo.getAssignee()}" th:href="@{'/assignee/{id}'(id=${todo.getAssigneeId()})}"></a></td>
+        <td th:text="${todo.getDate()}"></td>
+        <td th:text="${todo.getDueDate()}"></td>
         <td>
             <form action="#" th:action="@{'/todo/{id}/delete'(id=${todo.getId()})}" th:method="delete">
                 <button type="submit">delete</button>
