add working trick center to programming fox club

--- a/week-08/day-4/src/main/resources/templates/index.html
+++ b/week-08/day-4/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
     <h2>Known tricks</h2>
     <p th:if="${fox.getTricks().isEmpty()}">You know no tricks, yet. Go and learn some.</p>
     <ul>
-        <li th:each="tricks : ${fox.getTricks()}" th:text="tricks"></li>
+        <li th:each="trick : ${fox.getTricks()}" th:text="${trick.toString()}"></li>
     </ul>
 </div>
 </body>
