add register page

--- a/week-08/day-4/src/main/resources/templates/login.html
+++ b/week-08/day-4/src/main/resources/templates/login.html
@@ -15,6 +15,7 @@
         <label for="name">Name</label><input type="text" id="name" th:name="name">
         <button type="submit">GO</button>
     </form>
+    <p>If you don't have account please register <a th:href="@{/register}">here</a></p>
 </div>
 </body>
 </html>
