--- a/week-08/day-4/src/main/resources/templates/index.html
+++ b/week-08/day-4/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
         <li><a href="#" th:href="@{/(name=${fox.getName()})}">Information</a></li>
         <li><a href="" th:href="@{/nutritionStore(name=${fox.getName()})}">Nutrition Store</a></li>
         <li><a href="" th:href="@{/trickCenter(name=${fox.getName()})}">Trick Center</a></li>
+        <li><a href="" th:href="@{/register}">Register</a></li>
     </ul>
 </div>
 <div>
