--- a/week-09/day-4/src/main/resources/templates/submit.html
+++ b/week-09/day-4/src/main/resources/templates/submit.html
@@ -20,5 +20,8 @@
         <button type="submit">Submit</button>
     </form>
 </div>
+<div>
+    <h2 th:if="${failed}">I think you forgot something...</h2>
+</div>
 </body>
 </html>
