user handling working properly

--- a/week-09/day-4/src/main/resources/templates/index.html
+++ b/week-09/day-4/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
     <br>
     <a href="#" th:href="@{/register}">Register</a>
     <br>
-    <a href="#" th:href="@{/submit/{id}(id=${user.getId()})}">Submit new post</a>
+    <a href="#" th:href="@{/submit/}">Submit new post</a>
 </div>
 <div id="spacer-side">
     <h1>Trending posts</h1>
@@ -25,6 +25,7 @@
             <td><a th:href="@{/voteUp/{id}(id=${post.getId()})}">+</a></td>
             <td><a th:href="@{/voteDown/{id}(id=${post.getId()})}">-</a></td>
             <td><a th:href="@{${post.getUrl()}}"><p th:text="${post.getTitle()}"></p></a></td>
+            <td th:text="${post.getUser()}"></td>
         </tr>
     </table>
 </div>
