--- a/week-09/day-4/src/main/resources/templates/index.html
+++ b/week-09/day-4/src/main/resources/templates/index.html
@@ -4,23 +4,63 @@
     <meta charset="UTF-8">
     <title>Reddit project</title>
     <link rel="stylesheet" th:href="@{/style.css}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-<div>
-    <a href="" th:href="@{/login}">Login</a>
-    <br>
-    <a href="#" th:href="@{/register}">Register</a>
-    <br>
-    <a href="#" th:href="@{/submit/}">Submit new post</a>
-</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Reddit project</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#" th:href="@{/}">Posts <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" th:href="@{/submit/}">Submit new post</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" th:href="@{/login}">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/register}">Register</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
 <div id="spacer-side">
     <h1>Trending posts</h1>
 </div>
 
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col">Votes</th>
+        <th scope="col">+</th>
+        <th scope="col">-</th>
+        <th scope="col">Title</th>
+        <th scope="col">User</th>
+        <th scope="col">Time</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="post : ${posts}">
+        <th scope="row" th:text="${post.getLikes()}">1</th>
+        <td><a th:href="@{/voteUp/{id}(id=${post.getId()})}">+</a></td>
+        <td><a th:href="@{/voteDown/{id}(id=${post.getId()})}">-</a></td>
+        <td><a th:href="@{${post.getUrl()}}"><p th:text="${post.getTitle()}"></p></a></td>
+        <td th:text="${post.getUser()}"></td>
+        <td th:text="${post.timeDifference()}"></td>
+    </tr>
+    </tbody>
+</table>
+
 <div>
     <table>
         <tr th:each="post : ${posts}">
-            <td th:text="${post.getId()}"></td>
             <td th:text="${post.getLikes()}"></td>
             <td><a th:href="@{/voteUp/{id}(id=${post.getId()})}">+</a></td>
             <td><a th:href="@{/voteDown/{id}(id=${post.getId()})}">-</a></td>
@@ -31,7 +71,7 @@
     </table>
 </div>
 <div>
-    <h1 th:text="${user}"></h1>
+    <h1 th:text="${currentUser}"></h1>
 </div>
 </body>
 </html>
