--- a/week-09/day-4/src/main/resources/templates/register.html
+++ b/week-09/day-4/src/main/resources/templates/register.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Register - Reddit project</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
 <h1>User register</h1>
