add frontend exercise

--- a/week-09/day-4/src/main/resources/templates/index.html
+++ b/week-09/day-4/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
 </nav>
 
 <div id="spacer-side">
-    <h1>Trending posts</h1>
+    <h1 class="text-center">Trending posts</h1>
 </div>
 
 <table class="table">
